--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register</a></li>
+                    <li><a href="cart.html"><i class='bx bx-cart cart' ></i></a></li>
                 </ul>
             </div>
         </section>
 
         <section id="product1" class="section-p1">
             <div class="pro-container">
-                <div class="pro" onclick="window.location.href='sproduct.html';">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -39,9 +39,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -55,9 +55,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -71,9 +71,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -87,9 +87,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -103,9 +103,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -119,9 +119,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -135,9 +135,9 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -151,10 +151,10 @@
                         </div>
                         <h4>20 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
             
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -168,9 +168,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -184,9 +184,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -200,9 +200,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -216,9 +216,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -232,9 +232,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -248,9 +248,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -264,9 +264,9 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='cart.html';">
                     <img class="shirt" src="tshirt-product.jpg" alt="">
                     <div class="des">
                         <span>brand</span>
@@ -280,7 +280,7 @@
                         </div>
                         <h4>10 CAD</h4>
                     </div>
-                    <a href="#"><i class='bx bx-cart cart' ></i></a>
+                    <a href="cart.html"><i class='bx bx-cart cart' ></i></a>
                 </div>
             </div>
         </section>
@@ -334,7 +334,7 @@
                 <h4>My Account</h4>
                 <a href="login.html">Sign In</a>
                 <a href="#">View Cart</a>
-                <a href="#">My Wishlist</a>
+                <a href="wishlist.html">My Wishlist</a>
                 <a href="#">Track My Order</a>
                 <a href="#">Help</a>
             </div>
