--- a/register.html
+++ b/register.html
@@ -129,7 +129,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Register</a></li>
+                <li><a href="cart.html"><i class='bx bx-cart cart' ></i></a></li>
             </ul>
         </div>
     </section>
@@ -189,7 +189,7 @@
             <h4>My Account</h4>
             <a href="login.html">Sign In</a>
             <a href="#">View Cart</a>
-            <a href="#">My Wishlist</a>
+            <a href="wishlist.html">My Wishlist</a>
             <a href="#">Track My Order</a>
             <a href="#">Help</a>
         </div>
